--- a/.dockerignore
+++ b/.dockerignore
@@ -1,48 +1,98 @@
-# Ignore everything by default
-**
+# Dependencies
+node_modules
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Whitelist only essential files/folders
-!public/**
-!.well-known/**
-!package.json
-!package-lock.json
-!next.config.js
-!tsconfig.json
-!Dockerfile
-!fly.toml
+# Next.js build output
+.next
+out
+build
 
-# Exclude hidden/system files that may persist
-git/*
-**/node_modules/**
-**/.DS_Store
+# Environment files
+.env*
+!.env.example
 
-# Explicitly exclude secrets and developer configs
-.env
-.env.*
-.npmrc
-.sentryclirc
+# Git
 .git
-.github/**
-.husky/**
-.vscode/**
-.idea/**
+.gitignore
 
-# Exclude build artifacts and caches
-.next/**
-.turbo/**
-out/**
-dist/**
-build/**
-coverage/**
-tmp/**
-.cache/**
-**/*.log
-logs/**
+# Documentation
+README.md
+docs/
+*.md
 
-# Optionally allow pages/app if you need server code
-!src/**
+# IDE files
+.vscode
+.idea
+*.swp
+*.swo
 
-# Even inside src, never include secret-like files
-src/**/*.env*
-src/**/*.{pem,key,crt,csr,p12,pfx}
+# OS files
+.DS_Store
+Thumbs.db
 
+# Logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# Temporary folders
+tmp/
+temp/
+
+# Fly.io
+.fly/
+
+# Sentry
+.sentryclirc
