--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "security:audit": "npm audit --audit-level=moderate",
+    "security:fix": "npm audit fix --force",
+    "security:update": "npm update && npm audit fix",
+    "security:check": "npm audit && npm outdated"
   },
   "dependencies": {
     "@creit.tech/stellar-wallets-kit": "^1.7.5",
